# langsmith-scrape-eval

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
examples/: create_scraping_datasets.py  langsmith_scraping_evaluation.py  scraping_evaluation.py  simple_evaluation.py
src/langsmith_scape_eval/: dataset_creator.py  dataset_manager.py  evaluators.py  example_evaluators.py  scrape_evaluator.py  scrape_evaluators.py  scrape_langsmith_evaluators.py
